# UEM

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt
core/cognition/: __init__.py  planning.py  processor.py  types.py
core/language/: __init__.py  chat_agent.py  context.py  llm_adapter.py
core/learning/: __init__.py  adaptation.py  episode.py  episode_logger.py  episode_store.py  episode_types.py  feedback.py  feedback_aggregator.py  feedback_scorer.py  feedback_stats.py  feedback_store.py  generalization.py  mdl.py  pattern_analyzer.py  patterns.py  processor.py  reinforcement.py  similarity.py  types.py
core/memory/: __init__.py  conversation.py  embeddings.py  semantic.py  store.py  types.py
core/perception/: __init__.py  extractor.py  filters.py  processor.py  types.py
core/self/: __init__.py  goals.py  needs.py  processor.py  types.py
core/utils/: __init__.py  text.py
data/: construction_stats.json
docs/: API_REFERENCE.md  CHECKPOINT_2025-12-07.md  CHECKPOINT_2025-12-08.md  CHECKPOINT_2025-12-11.md  DATA_TYPES.md  MEMORY_MODULE_DESIGN.md  PROJECT_ANALYSIS.md  PROJECT_STRUCTURE.md  TURKISH_LANGUAGE_ENHANCEMENT_REPORT.md  UEM_ROADMAP_FAZ4_PLUS.md  UEM_v2_Architecture_Guide.md  VALUES_CHARTER.md  VISION.md
engine/: __init__.py  cycle.py
engine/events/: __init__.py  bus.py
engine/handlers/: __init__.py  affect.py  cognition.py  executive.py  memory.py  perception.py
foundation/: __init__.py
interface/: __init__.py
scripts/: aggregate_feedback.py  analyze_episodes.py  demo_dashboard.py  demo_full_system.py  generate_docs.py  generate_test_episodes.py
sql/: conversation_schema.sql  learning_schema.sql  memory_schema.sql
(+140 files in other folders)
