[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uem"
version = "2.0.0"
description = "Unified Emotional Mind - Cognitive architecture for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
db = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "uem[llm,embeddings,db,dev]",
]

[project.scripts]
uem-chat = "interface.chat.cli:main"

[project.urls]
Homepage = "https://github.com/isakara5967/UEM"
Documentation = "https://github.com/isakara5967/UEM#readme"
Repository = "https://github.com/isakara5967/UEM"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "interface*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
